--- a/package.json
+++ b/package.json
@@ -36,5 +36,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
+  },
+  "devDependencies": {
+    "husky": "^7.0.4"
   }
 }
